@@ -1,3 +1,7 @@
+2007-11-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	* library/tkfbox.tcl: Better theming in the file list area.
+
 2007-11-19  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5b3 TAGGED FOR RELEASE ***
